Separate DNS certificate from other certificates
- Separate DNS certificate from other certificates (e.g., SPIFFE, SDS, etc) so each certificate
can be used for a specific purpose.
- Start certificate controller before MCP controller to avoid deadlock.
Certificate controller must be created before MCP controller to avoid deadlock caused by the circular dependency,
i.e., MCP server pod waits to mount a certificate while Pilot waits MCP server.

--- a/install/kubernetes/helm/istio/charts/galley/templates/deployment.yaml
+++ b/install/kubernetes/helm/istio/charts/galley/templates/deployment.yaml
@@ -71,7 +71,7 @@ spec:
 {{- if not $.Values.global.configValidation }}
           - --enable-validation=false
 {{- end }}
-{{- if .Values.global.operator }}
+{{- if .Values.global.operatorManageWebhooks }}
           - --enable-reconcileWebhookConfiguration=false
 {{- else }}
           - --enable-reconcileWebhookConfiguration=true
@@ -85,10 +85,20 @@ spec:
 {{- if .Values.enableAnalysis }}
           - --enableAnalysis=true
 {{- end }}
+{{- if .Values.global.certificates }}
+          - --validation.tls.clientCertificate=/etc/dnscerts/cert-chain.pem
+          - --validation.tls.privateKey=/etc/dnscerts/key.pem
+          - --validation.tls.caCertificates=/etc/dnscerts/root-cert.pem
+{{- end }}
           volumeMounts:
           - name: certs
             mountPath: /etc/certs
             readOnly: true
+{{- if .Values.global.certificates }}
+          - name: dnscerts
+            mountPath: /etc/dnscerts
+            readOnly: true
+{{- end }}
           - name: config
             mountPath: /etc/config
             readOnly: true
@@ -122,10 +132,11 @@ spec:
       volumes:
       - name: certs
         secret:
-{{- if .Values.global.certificates }}
-          secretName: dns.istio-galley-service-account
-{{- else }}
           secretName: istio.istio-galley-service-account
+{{- if .Values.global.certificates }}
+      - name: dnscerts
+        secret:
+          secretName: dns.istio-galley-service-account
 {{- end }}
       - name: config
         configMap:
