--- a/install/kubernetes/helm/istio/charts/mixer/templates/config.yaml
+++ b/install/kubernetes/helm/istio/charts/mixer/templates/config.yaml
@@ -1054,6 +1054,9 @@ spec:
       http:
         http2MaxRequests: 10000
         maxRequestsPerConnection: 10000
+    loadBalancer:
+      consistentHash:
+        httpHeaderName: :authority
 {{- end }}
 ---
 {{- if .Values.telemetry.enabled }}
@@ -1087,6 +1090,9 @@ spec:
       http:
         http2MaxRequests: 10000
         maxRequestsPerConnection: 10000
+    loadBalancer:
+      consistentHash:
+        httpHeaderName: :authority
 {{- end }}
 ---
 {{- end }}
