--- a/galley/pkg/config/analysis/msg/messages.yaml
+++ b/galley/pkg/config/analysis/msg/messages.yaml
@@ -37,6 +37,26 @@ messages:
       - name: detail
         type: string
 
+  - name: "MisplacedAnnotation"
+    code: IST0005
+    level: Warning
+    description: "An Istio annotation is applied to the wrong kind of resource."
+    template: "Misplaced annotation: %s can only be applied to %s"
+    args:
+       - name: annotation
+         type: string
+       - name: kind
+         type: string
+
+  - name: "UnknownAnnotation"
+    code: IST0006
+    level: Warning
+    description: "An Istio annotation is not recognized for any kind of resource"
+    template: "Unknown annotation: %s"
+    args:
+       - name: annotation
+         type: string
+
   - name: "ReferencedResourceNotFound"
     code: IST0101
     level: Error
