Change User to Users

--- a/pilot/pkg/security/authz/builder/testdata/v1beta1-not-override-v1alpha1-out.yaml
+++ b/pilot/pkg/security/authz/builder/testdata/v1beta1-not-override-v1alpha1-out.yaml
@@ -12,4 +12,6 @@ rules:
       principals:
         - andIds:
             ids:
-              - any: true
+              - orIds:
+                  ids:
+                    - any: true
