--- a/pilot/pkg/security/authz/builder/testdata/v1alpha1-simple-policy-td-aliases-out.yaml
+++ b/pilot/pkg/security/authz/builder/testdata/v1alpha1-simple-policy-td-aliases-out.yaml
@@ -12,19 +12,19 @@ rules:
       principals:
         - andIds:
             ids:
-              - metadata:
-                  filter: istio_authn
-                  path:
-                    - key: source.principal
-                  value:
-                    stringMatch:
-                      exact: td1/ns/istio-system/sa/http-viewer
-        - andIds:
-            ids:
-              - metadata:
-                  filter: istio_authn
-                  path:
-                    - key: source.principal
-                  value:
-                    stringMatch:
-                      exact: cluster.local/ns/istio-system/sa/http-viewer
+              - orIds:
+                  ids:
+                    - metadata:
+                        filter: istio_authn
+                        path:
+                          - key: source.principal
+                        value:
+                          stringMatch:
+                            exact: td1/ns/istio-system/sa/http-viewer
+                    - metadata:
+                        filter: istio_authn
+                        path:
+                          - key: source.principal
+                        value:
+                          stringMatch:
+                            exact: cluster.local/ns/istio-system/sa/http-viewer
