--- a/pkg/test/echo/docker/Dockerfile.app_sidecar
+++ b/pkg/test/echo/docker/Dockerfile.app_sidecar
@@ -12,7 +12,7 @@ COPY node_agent                       /usr/local/bin/node_agent
 COPY istio-start.sh                   /usr/local/bin/istio-start.sh
 COPY istio-node-agent-start.sh        /usr/local/bin/istio-node-agent-start.sh
 COPY istio-iptables.sh                /usr/local/bin/istio-iptables
-COPY istio-clean-iptables.sh          /usr/local/bin/istio-clean-iptables.sh
+COPY istio-clean-iptables.sh          /usr/local/bin/istio-clean-iptables
 COPY postinst.sh                      /usr/local/bin/postinst.sh
 COPY envoy_bootstrap_v2.json          /var/lib/istio/envoy/envoy_bootstrap_tmpl.json
 COPY envoy_bootstrap_drain.json       /var/lib/istio/envoy/envoy_bootstrap_drain.json
