--- a/galley/pkg/config/analysis/analyzers/testdata/injection-with-mismatched-sidecar.yaml
+++ b/galley/pkg/config/analysis/analyzers/testdata/injection-with-mismatched-sidecar.yaml
@@ -49,6 +49,24 @@ spec:
   - image: docker.io/istio/proxyv2:1.3.1
     name: istio-proxy
 ---
+# details-v1-pod-overwritten-sidecar has a custom sidecar version injected and
+# therefore should not match the injector version.
+apiVersion: v1
+kind: Pod
+metadata:
+  labels:
+    app: details
+  annotations:
+    sidecar.istio.io/proxyImage: docker.io/istio/proxyv2:1.3.0-prerelease
+  name: details-v1-pod-overwritten-sidecar
+  namespace: enabled-namespace
+spec:
+  containers:
+  - image: docker.io/istio/examples-bookinfo-details-v2:1.15.0
+    name: details
+  - image: docker.io/istio/proxyv2:1.3.0-prerelease
+    name: istio-proxy
+---
 # Namespace 'default' does not have an explicit label, so no version checking should happen.
 apiVersion: v1
 kind: Namespace
