--- a/istioctl/cmd/testdata/auth/upgrade/one-rule-multiple-services.golden.yaml
+++ b/istioctl/cmd/testdata/auth/upgrade/one-rule-multiple-services.golden.yaml
@@ -1,6 +1,13 @@
 apiVersion: security.istio.io/v1beta1
 kind: AuthorizationPolicy
 metadata:
+  name: deny-all
+  namespace: istio-system
+spec:
+---
+apiVersion: security.istio.io/v1beta1
+kind: AuthorizationPolicy
+metadata:
   name: default-productpage
   namespace: default
 spec:
