--- a/install/kubernetes/helm/istio/charts/galley/templates/deployment.yaml
+++ b/install/kubernetes/helm/istio/charts/galley/templates/deployment.yaml
@@ -24,7 +24,7 @@ spec:
         app: {{ template "galley.name" . }}
         chart: {{ template "galley.chart" . }}
         heritage: {{ .Release.Service }}
-        release: {{ .Release.Name }}
+        release: {{ .Release.Name }}      
         istio: galley
       annotations:
         sidecar.istio.io/inject: "false"
@@ -71,7 +71,7 @@ spec:
 {{- if not $.Values.global.configValidation }}
           - --enable-validation=false
 {{- end }}
-{{- if .Values.global.operatorManageWebhooks }}
+{{- if .Values.global.operator }}
           - --enable-reconcileWebhookConfiguration=false
 {{- else }}
           - --enable-reconcileWebhookConfiguration=true
@@ -85,20 +85,10 @@ spec:
 {{- if .Values.enableAnalysis }}
           - --enableAnalysis=true
 {{- end }}
-{{- if .Values.global.certificates }}
-          - --validation.tls.clientCertificate=/etc/dnscerts/cert-chain.pem
-          - --validation.tls.privateKey=/etc/dnscerts/key.pem
-          - --validation.tls.caCertificates=/etc/dnscerts/root-cert.pem
-{{- end }}
           volumeMounts:
           - name: certs
             mountPath: /etc/certs
             readOnly: true
-{{- if .Values.global.certificates }}
-          - name: dnscerts
-            mountPath: /etc/dnscerts
-            readOnly: true
-{{- end }}
           - name: config
             mountPath: /etc/config
             readOnly: true
@@ -132,11 +122,10 @@ spec:
       volumes:
       - name: certs
         secret:
-          secretName: istio.istio-galley-service-account
 {{- if .Values.global.certificates }}
-      - name: dnscerts
-        secret:
           secretName: dns.istio-galley-service-account
+{{- else }}
+          secretName: istio.istio-galley-service-account
 {{- end }}
       - name: config
         configMap:
