--- a/install/kubernetes/helm/istio/charts/security/templates/enable-mesh-mtls.yaml
+++ b/install/kubernetes/helm/istio/charts/security/templates/enable-mesh-mtls.yaml
@@ -19,45 +19,45 @@ spec:
 ---
 # Corresponding destination rule to configure client side to use mutual TLS when talking to
 # any service (host) in the mesh.
-# apiVersion: networking.istio.io/v1alpha3
-# kind: DestinationRule
-# metadata:
-#   name: "default"
-#   namespace: {{ .Release.Namespace }}
-#   labels:
-#     app: {{ template "security.name" . }}
-#     chart: {{ template "security.chart" . }}
-#     heritage: {{ .Release.Service }}
-#     release: {{ .Release.Name }}
-# spec:
-#   host: "*.local"
-#   {{- if .Values.global.defaultConfigVisibilitySettings }}
-#   exportTo:
-#   - '*'
-#   {{- end }}
-#   trafficPolicy:
-#     tls:
-#       mode: ISTIO_MUTUAL
+apiVersion: networking.istio.io/v1alpha3
+kind: DestinationRule
+metadata:
+  name: "default"
+  namespace: {{ .Release.Namespace }}
+  labels:
+    app: {{ template "security.name" . }}
+    chart: {{ template "security.chart" . }}
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
+spec:
+  host: "*.local"
+  {{- if .Values.global.defaultConfigVisibilitySettings }}
+  exportTo:
+  - '*'
+  {{- end }}
+  trafficPolicy:
+    tls:
+      mode: ISTIO_MUTUAL
 ---
 # Destination rule to disable (m)TLS when talking to API server, as API server doesn't have sidecar.
 # Customer should add similar destination rules for other services that don't have sidecar.
-# apiVersion: networking.istio.io/v1alpha3
-# kind: DestinationRule
-# metadata:
-#   name: "api-server"
-#   namespace: {{ .Release.Namespace }}
-#   labels:
-#     app: {{ template "security.name" . }}
-#     chart: {{ template "security.chart" . }}
-#     heritage: {{ .Release.Service }}
-#     release: {{ .Release.Name }}
-# spec:
-#   host: "kubernetes.default.svc.{{ .Values.global.proxy.clusterDomain }}"
-#   {{- if .Values.global.defaultConfigVisibilitySettings }}
-#   exportTo:
-#   - '*'
-#   {{- end }}
-#   trafficPolicy:
-#     tls:
-#       mode: DISABLE
+apiVersion: networking.istio.io/v1alpha3
+kind: DestinationRule
+metadata:
+  name: "api-server"
+  namespace: {{ .Release.Namespace }}
+  labels:
+    app: {{ template "security.name" . }}
+    chart: {{ template "security.chart" . }}
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
+spec:
+  host: "kubernetes.default.svc.{{ .Values.global.proxy.clusterDomain }}"
+  {{- if .Values.global.defaultConfigVisibilitySettings }}
+  exportTo:
+  - '*'
+  {{- end }}
+  trafficPolicy:
+    tls:
+      mode: DISABLE
 {{- end }}
