--- a/manifests/charts/istio-telemetry/kiali/values.yaml
+++ b/manifests/charts/istio-telemetry/kiali/values.yaml
@@ -39,21 +39,10 @@ kiali:
 
   dashboard:
     auth:
-      strategy: login # Can be anonymous, login, openshift, or ldap
-      # ldap: # This is required to use the ldap strategy
-      #   ldap_base: "DC=example,DC=com"
-      #   ldap_bind_dn: "CN={USERID},OU=xyz,OU=Users,OU=Accounts,DC=example,DC=com"
-      #   ldap_group_filter: "(cn=%s)"
-      #   ldap_host: "ldap-service.ldap-namespace"
-      #   ldap_insecure_skip_verify: true
-      #   ldap_mail_id_key: "mail"
-      #   ldap_member_of_key: "memberOf"
-      #   ldap_port: 123
-      #   ldap_role_filter: ".*xyz.*"
-      #   ldap_search_filter: "(&(name={USERID}))"
-      #   ldap_use_ssl: false
-      #   ldap_user_filter: "(cn=%s)"
-      #   ldap_user_id_key: "cn"
+      strategy: login # Can be anonymous, login, openshift, or openid
+      # openid:
+      #   client_id: "kiali-client"
+      #   issuer_uri: "https://openid.issuer.com"
 
     secretName: kiali # You must create a secret with this name - one is not provided out-of-box unless you've chose to create a demo secret.
     usernameKey: username # This is the key name within the secret whose value is the actual username.
