--- a/manifests/charts/istiocoredns/values.yaml
+++ b/manifests/charts/istiocoredns/values.yaml
@@ -44,9 +44,6 @@ istiocoredns:
     targetAverageUtilization: 80
 
 global:
-  podDNSSearchNamespaces:
-  - global
-
   # Specify pod scheduling arch(amd64, ppc64le, s390x) and weight as follows:
   #   0 - Never scheduled
   #   1 - Least preferred
@@ -101,6 +98,16 @@ global:
   # Must be set for any cluster configured with private docker registry.
   imagePullSecrets: []
   # - private-registry-key
+
+  # Custom DNS config for the pod to resolve names of services in other
+  # clusters. Use this to add additional search domains, and other settings.
+  # see
+  # https://kubernetes.io/docs/concepts/services-networking/dns-pod-service/#dns-config
+  # This does not apply to gateway pods as they typically need a different
+  # set of DNS settings than the normal application pods (e.g., in
+  # multicluster scenarios).
+  podDNSSearchNamespaces:
+  - global
 
   # Kubernetes >=v1.11.0 will create two PriorityClass, including system-cluster-critical and
   # system-node-critical, it is better to configure this in order to make sure your Istio pods
