--- a/pilot/docker/Dockerfile.proxyv2
+++ b/pilot/docker/Dockerfile.proxyv2
@@ -34,9 +34,10 @@ FROM ${BASE_DISTRIBUTION}
 
 ARG proxy_version
 ARG istio_version
+ARG SIDECAR=envoy
 
 # Install Envoy.
-COPY envoy /usr/local/bin/envoy
+COPY $SIDECAR /usr/local/bin/$SIDECAR
 
 # Environment variable indicating the exact proxy sha - for debugging or version-specific configs 
 ENV ISTIO_META_ISTIO_PROXY_SHA $proxy_version
