--- a/manifests/charts/base/files/gen-istio-cluster.yaml
+++ b/manifests/charts/base/files/gen-istio-cluster.yaml
@@ -3390,6 +3390,9 @@ rules:
   - apiGroups: ["config.istio.io", "security.istio.io", "networking.istio.io", "authentication.istio.io"]
     verbs: ["get", "watch", "list"]
     resources: ["*"]
+  - apiGroups: ["networking.istio.io"]
+    verbs: ["get", "watch", "list", "update", "create", "delete"]
+    resources: ["workloadentries"]
 
   # auto-detect installed CRD definitions
   - apiGroups: ["apiextensions.k8s.io"]
