--- a/manifests/charts/base/templates/clusterrole.yaml
+++ b/manifests/charts/base/templates/clusterrole.yaml
@@ -26,6 +26,9 @@ rules:
     # TODO: should be on just */status but wildcard is not supported
     resources: ["*"]
 {{- end }}
+  - apiGroups: ["networking.istio.io"]
+    verbs: ["get", "watch", "list", "update", "create", "delete"]
+    resources: ["workloadentries"]
 
   # auto-detect installed CRD definitions
   - apiGroups: ["apiextensions.k8s.io"]
