--- a/common/config/.golangci.yml
+++ b/common/config/.golangci.yml
@@ -145,6 +145,7 @@ linters-settings:
       - stringXbytes
       - switchTrue
       - typeAssertChain
+      - typeSwitchVar
       - typeUnparen
       - underef
       - unlambda
