--- a/releasenotes/notes/add-release-notes-generation.yaml
+++ b/releasenotes/notes/add-release-notes-generation.yaml
@@ -1,18 +1,18 @@
-apiVersion: release-notes/v1
+apiVersion: release-notes/v2
 
 # This YAML file describes the format for specifying a release notes entry for Istio.
 # This should be filled in for all user facing changes.
 
-# kind describes the type of change that this represents. 
+# kind describes the type of change that this represents.
 # Valid Values are:
-# - bug-fix -- Used to specify that this change represents a bug fix. 
-# - security-fix -- Used to specify that this change represents a security fix. 
-# - feature -- Used to specify a new feature that has been added. 
+# - bug-fix -- Used to specify that this change represents a bug fix.
+# - security-fix -- Used to specify that this change represents a security fix.
+# - feature -- Used to specify a new feature that has been added.
 # - test -- Used to describe additional testing added. This file is optional for
 #   tests, but included for completeness.
 kind: feature
 
-# area describes the area that this change affects. 
+# area describes the area that this change affects.
 # Valid values are:
 # - traffic-management
 # - security
@@ -23,16 +23,11 @@ kind: feature
 area: documentation
 
 # issue is a (potentially comma separated list) of GitHub issues resolved in this note.
-issue: https://github.com/istio/istio/issues/23622
+issue:
+- https://github.com/istio/istio/issues/23622
 
 # releaseNotes is a markdown listing of any user facing changes. This will appear in the
 # release notes.
 releaseNotes: |
   *Added* support for autogenerating release notes based off of a file present in the /releasenotes/notes directory.
 
-# upgradeNotes is a markdown listing of any changes that will affect the upgrade
-# process. This will appear in the release notes. 
-upgradeNotes: None
-# securityNotes is a markdown listing of any changes related to the security of
-# Istio.
-securityNotes: None
